Closed Bug 1535617 Opened 5 years ago Closed 4 years ago

Intermittent GECKO(2167) | SUMMARY: AddressSanitizer: SEGV /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/dom/BrowsingContext.h:154:41 in IsContent

Categories

(Core :: DOM: Navigation, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Fission Milestone M6
Tracking Status
firefox-esr68 --- unaffected
firefox73 --- wontfix
firefox74 --- wontfix
firefox75 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: kmag)

References

(Depends on 1 open bug, Blocks 1 open bug, Regressed 1 open bug)

Details

(Keywords: intermittent-failure, regression)

Attachments

(2 files)

#[markdown(off)]
Filed by: nerli [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=234120183&repo=autoland

https://queue.taskcluster.net/v1/task/Z-Xby3jIR7u8x0oKLAL5jQ/runs/0/artifacts/public/logs/live_backing.log

[task 2019-03-15T12:45:38.090Z] 12:45:38 INFO - TEST-START | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js
[task 2019-03-15T12:45:40.218Z] 12:45:40 INFO - GECKO(2167) | ###!!! [Child][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2019-03-15T12:45:41.225Z] 12:45:41 INFO - GECKO(2167) | AddressSanitizer:DEADLYSIGNAL
[task 2019-03-15T12:45:41.226Z] 12:45:41 INFO - GECKO(2167) | =================================================================
[task 2019-03-15T12:45:41.227Z] 12:45:41 ERROR - GECKO(2167) | ==2388==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000070 (pc 0x7f76f56882ba bp 0x7fffb8162850 sp 0x7fffb8162640 T0)
[task 2019-03-15T12:45:41.228Z] 12:45:41 INFO - GECKO(2167) | ==2388==The signal is caused by a READ memory access.
[task 2019-03-15T12:45:41.230Z] 12:45:41 INFO - GECKO(2167) | ==2388==Hint: address points to the zero page.
[task 2019-03-15T12:45:41.941Z] 12:45:41 INFO - GECKO(2167) | #0 0x7f76f56882b9 in IsContent /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/dom/BrowsingContext.h:154:41
[task 2019-03-15T12:45:41.943Z] 12:45:41 INFO - GECKO(2167) | #1 0x7f76f56882b9 in nsWebBrowser::Create(nsIWebBrowserChrome*, nsIWidget*, mozilla::OriginAttributes const&, mozilla::dom::BrowsingContext*) /builds/worker/workspace/build/src/toolkit/components/browser/nsWebBrowser.cpp:108
[task 2019-03-15T12:45:41.969Z] 12:45:41 INFO - GECKO(2167) | #2 0x7f76f16dbc07 in mozilla::dom::TabChild::Init(mozIDOMWindowProxy*) /builds/worker/workspace/build/src/dom/ipc/TabChild.cpp:526:17
[task 2019-03-15T12:45:41.979Z] 12:45:41 INFO - GECKO(2167) | #3 0x7f76f161d8dd in mozilla::dom::ContentChild::RecvPBrowserConstructor(mozilla::dom::PBrowserChild*, mozilla::dom::IdType<mozilla::dom::TabParent> const&, mozilla::dom::IdType<mozilla::dom::TabParent> const&, mozilla::dom::IPCTabContext const&, unsigned int const&, mozilla::dom::IdType<mozilla::dom::ContentParent> const&, mozilla::dom::BrowsingContext*, bool const&) /builds/worker/workspace/build/src/dom/ipc/ContentChild.cpp:1784:7
[task 2019-03-15T12:45:42.043Z] 12:45:42 INFO - GECKO(2167) | #4 0x7f76eaea7a02 in mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/PContentChild.cpp:5574:56
[task 2019-03-15T12:45:42.061Z] 12:45:42 INFO - GECKO(2167) | #5 0x7f76eacf79f9 in mozilla::ipc::MessageChannel::DispatchAsyncMessage(IPC::Message const&) /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2151:21
[task 2019-03-15T12:45:42.063Z] 12:45:42 INFO - GECKO(2167) | #6 0x7f76eacf4b9c in mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:2078:9
[task 2019-03-15T12:45:42.065Z] 12:45:42 INFO - GECKO(2167) | #7 0x7f76eacf651b in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:1937:3
[task 2019-03-15T12:45:42.067Z] 12:45:42 INFO - GECKO(2167) | #8 0x7f76eacf6a87 in mozilla::ipc::MessageChannel::MessageTask::Run() /builds/worker/workspace/build/src/ipc/glue/MessageChannel.cpp:1968:13
[task 2019-03-15T12:45:42.068Z] 12:45:42 INFO - GECKO(2167) | #9 0x7f76e9d1cf51 in mozilla::SchedulerGroup::Runnable::Run() /builds/worker/workspace/build/src/xpcom/threads/SchedulerGroup.cpp:295:32
[task 2019-03-15T12:45:42.072Z] 12:45:42 INFO - GECKO(2167) | #10 0x7f76e9d4dc99 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/workspace/build/src/xpcom/threads/nsThread.cpp:1179:14
[task 2019-03-15T12:45:42.075Z] 12:45:42 INFO - GECKO(2167) | #11 0x7f76e9d54438 in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/workspace/build/src/xpcom/threads/nsThreadUtils.cpp:482:10
[task 2019-03-15T12:45:42.077Z] 12:45:42 INFO - GECKO(2167) | #12 0x7f76eacfed2f in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/workspace/build/src/ipc/glue/MessagePump.cpp:110:5
[task 2019-03-15T12:45:42.083Z] 12:45:42 INFO - GECKO(2167) | #13 0x7f76eac31c9f in RunInternal /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:315:10
[task 2019-03-15T12:45:42.085Z] 12:45:42 INFO - GECKO(2167) | #14 0x7f76eac31c9f in RunHandler /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:308
[task 2019-03-15T12:45:42.087Z] 12:45:42 INFO - GECKO(2167) | #15 0x7f76eac31c9f in MessageLoop::Run() /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:290
[task 2019-03-15T12:45:42.091Z] 12:45:42 INFO - GECKO(2167) | #16 0x7f76f1f731d9 in nsBaseAppShell::Run() /builds/worker/workspace/build/src/widget/nsBaseAppShell.cpp:137:27
[task 2019-03-15T12:45:42.092Z] 12:45:42 INFO - GECKO(2167) | #17 0x7f76f5c1bd1f in XRE_RunAppShell() /builds/worker/workspace/build/src/toolkit/xre/nsEmbedFunctions.cpp:933:20
[task 2019-03-15T12:45:42.095Z] 12:45:42 INFO - GECKO(2167) | #18 0x7f76eac31c9f in RunInternal /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:315:10
[task 2019-03-15T12:45:42.096Z] 12:45:42 INFO - GECKO(2167) | #19 0x7f76eac31c9f in RunHandler /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:308
[task 2019-03-15T12:45:42.098Z] 12:45:42 INFO - GECKO(2167) | #20 0x7f76eac31c9f in MessageLoop::Run() /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:290
[task 2019-03-15T12:45:42.099Z] 12:45:42 INFO - GECKO(2167) | #21 0x7f76f5c1b6be in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/workspace/build/src/toolkit/xre/nsEmbedFunctions.cpp:771:34
[task 2019-03-15T12:45:42.100Z] 12:45:42 INFO - GECKO(2167) | #22 0x5595a61a1404 in content_process_main /builds/worker/workspace/build/src/browser/app/../../ipc/contentproc/plugin-container.cpp:56:28
[task 2019-03-15T12:45:42.101Z] 12:45:42 INFO - GECKO(2167) | #23 0x5595a61a1404 in main /builds/worker/workspace/build/src/browser/app/nsBrowserApp.cpp:265
[task 2019-03-15T12:45:42.158Z] 12:45:42 INFO - GECKO(2167) | #24 0x7f7709f3482f in __libc_start_main /build/glibc-LK5gWL/glibc-2.23/csu/../csu/libc-start.c:291
[task 2019-03-15T12:45:42.160Z] 12:45:42 INFO - GECKO(2167) | #25 0x5595a60c6ad8 in _start (/builds/worker/workspace/build/application/firefox/firefox+0x2aad8)
[task 2019-03-15T12:45:42.160Z] 12:45:42 INFO - GECKO(2167) | AddressSanitizer can not provide additional info.
[task 2019-03-15T12:45:42.163Z] 12:45:42 INFO - GECKO(2167) | SUMMARY: AddressSanitizer: SEGV /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/dom/BrowsingContext.h:154:41 in IsContent
[task 2019-03-15T12:45:42.163Z] 12:45:42 INFO - GECKO(2167) | ==2388==ABORTING
[task 2019-03-15T12:45:42.231Z] 12:45:42 INFO - GECKO(2167) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x1F0088,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
[task 2019-03-15T12:47:08.112Z] 12:47:08 INFO - TEST-INFO | started process screentopng
[task 2019-03-15T12:47:08.823Z] 12:47:08 INFO - TEST-INFO | screentopng: exit 0
[task 2019-03-15T12:47:08.823Z] 12:47:08 INFO - Buffered messages logged at 12:45:38
[task 2019-03-15T12:47:08.825Z] 12:47:08 INFO - Entering test bound setup
[task 2019-03-15T12:47:08.826Z] 12:47:08 INFO - Leaving test bound setup
[task 2019-03-15T12:47:08.828Z] 12:47:08 INFO - Entering test bound test_EME_forgetThisSite
[task 2019-03-15T12:47:08.829Z] 12:47:08 INFO - Console message: [JavaScript Error: "The character encoding of the HTML document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the page must be declared in the document or in the transfer protocol." {file: "http://example.com/browser/browser/components/contextualidentity/test/browser/empty_file.html" line: 0}]
[task 2019-03-15T12:47:08.830Z] 12:47:08 INFO - Console message: [JavaScript Warning: "Using Encrypted Media Extensions at http://example.com/browser/browser/components/contextualidentity/test/browser/empty_file.html on an insecure (i.e. non-HTTPS) context is deprecated and will soon be removed. You should consider switching to a secure origin such as HTTPS." {file: "resource://testing-common/content-task.js line 59 > eval" line: 4}]
[task 2019-03-15T12:47:08.833Z] 12:47:08 INFO - Console message: MediaKeySystemAccess::GetKeySystemStatus(org.w3.clearkey) result=available msg=''
[task 2019-03-15T12:47:08.835Z] 12:47:08 INFO - Console message: [JavaScript Warning: "Calling navigator.requestMediaKeySystemAccess() (at http://example.com/browser/browser/components/contextualidentity/test/browser/empty_file.html) passing a candidate MediaKeySystemConfiguration containing audioCapabilities or videoCapabilities without a contentType with a “codecs” string is deprecated and will soon become unsupported." {file: "resource://testing-common/content-task.js line 59 > eval" line: 4}]
[task 2019-03-15T12:47:08.836Z] 12:47:08 INFO - TEST-PASS | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | One EME key has been added. - 1 == 1 -
[task 2019-03-15T12:47:08.840Z] 12:47:08 INFO - TEST-PASS | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | The key Id is correct. -
[task 2019-03-15T12:47:08.841Z] 12:47:08 INFO - Buffered messages logged at 12:45:40
[task 2019-03-15T12:47:08.844Z] 12:47:08 INFO - Console message: [JavaScript Error: "The character encoding of the HTML document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the page must be declared in the document or in the transfer protocol." {file: "http://example.com/browser/browser/components/contextualidentity/test/browser/empty_file.html" line: 0}]
[task 2019-03-15T12:47:08.846Z] 12:47:08 INFO - Console message: [JavaScript Warning: "Using Encrypted Media Extensions at http://example.com/browser/browser/components/contextualidentity/test/browser/empty_file.html on an insecure (i.e. non-HTTPS) context is deprecated and will soon be removed. You should consider switching to a secure origin such as HTTPS." {file: "resource://testing-common/content-task.js line 59 > eval" line: 4}]
[task 2019-03-15T12:47:08.847Z] 12:47:08 INFO - Console message: MediaKeySystemAccess::GetKeySystemStatus(org.w3.clearkey) result=available msg=''
[task 2019-03-15T12:47:08.849Z] 12:47:08 INFO - Console message: [JavaScript Warning: "Calling navigator.requestMediaKeySystemAccess() (at http://example.com/browser/browser/components/contextualidentity/test/browser/empty_file.html) passing a candidate MediaKeySystemConfiguration containing audioCapabilities or videoCapabilities without a contentType with a “codecs” string is deprecated and will soon become unsupported." {file: "resource://testing-common/content-task.js line 59 > eval" line: 4}]
[task 2019-03-15T12:47:08.850Z] 12:47:08 INFO - TEST-PASS | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | One EME key has been added. - 1 == 1 -
[task 2019-03-15T12:47:08.853Z] 12:47:08 INFO - TEST-PASS | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | The key Id is correct. -
[task 2019-03-15T12:47:08.855Z] 12:47:08 INFO - Buffered messages logged at 12:45:42
[task 2019-03-15T12:47:08.861Z] 12:47:08 INFO - Console message: [JavaScript Error: "remote browser crashed while on about:blank
[task 2019-03-15T12:47:08.862Z] 12:47:08 INFO - " {file: "chrome://mochikit/content/mochitest-e10s-utils.js" line: 8}]
[task 2019-03-15T12:47:08.863Z] 12:47:08 INFO - e10s_init/<@chrome://mochikit/content/mochitest-e10s-utils.js:8:8
[task 2019-03-15T12:47:08.864Z] 12:47:08 INFO - EventListener.handleEvent*e10s_init@chrome://mochikit/content/mochitest-e10s-utils.js:6:10
[task 2019-03-15T12:47:08.865Z] 12:47:08 INFO - testInit@chrome://mochikit/content/browser-test.js:103:5
[task 2019-03-15T12:47:08.866Z] 12:47:08 INFO - setTimeout handler*@chrome://mochikit/content/browser-test.js:21:1
[task 2019-03-15T12:47:08.866Z] 12:47:08 INFO - loadChromeScripts@jar:file:///tmp/tmprkCaiH.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:13:25
[task 2019-03-15T12:47:08.867Z] 12:47:08 INFO - loadMochitest@jar:file:///tmp/tmprkCaiH.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:112:3
[task 2019-03-15T12:47:08.868Z] 12:47:08 INFO - @tests/mochitest/runtests.py:1772:5
[task 2019-03-15T12:47:08.870Z] 12:47:08 INFO - @tests/mochitest/runtests.py:1773:8
[task 2019-03-15T12:47:08.871Z] 12:47:08 INFO - evaluate.sandbox/promise<@chrome://marionette/content/evaluate.js:128:10
[task 2019-03-15T12:47:08.872Z] 12:47:08 INFO - evaluate.sandbox@chrome://marionette/content/evaluate.js:106:17
[task 2019-03-15T12:47:08.873Z] 12:47:08 INFO - GeckoDriver.prototype.execute_@chrome://marionette/content/driver.js:1029:28
[task 2019-03-15T12:47:08.875Z] 12:47:08 INFO - async*GeckoDriver.prototype.executeScript@chrome://marionette/content/driver.js:911:29
[task 2019-03-15T12:47:08.877Z] 12:47:08 INFO - despatch@chrome://marionette/content/server.js:289:40
[task 2019-03-15T12:47:08.878Z] 12:47:08 INFO - execute@chrome://marionette/content/server.js:262:16
[task 2019-03-15T12:47:08.879Z] 12:47:08 INFO - onPacket/<@chrome://marionette/content/server.js:235:20
[task 2019-03-15T12:47:08.879Z] 12:47:08 INFO - onPacket@chrome://marionette/content/server.js:236:9
[task 2019-03-15T12:47:08.880Z] 12:47:08 INFO - _onJSONObjectReady/<@chrome://marionette/content/transport.js:492:20
[task 2019-03-15T12:47:08.882Z] 12:47:08 INFO -
[task 2019-03-15T12:47:08.883Z] 12:47:08 INFO - Buffered messages finished
[task 2019-03-15T12:47:08.884Z] 12:47:08 INFO - TEST-UNEXPECTED-FAIL | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | Test timed out -
[task 2019-03-15T12:47:08.886Z] 12:47:08 INFO - GECKO(2167) | MEMORY STAT | vsize 20974252MB | residentFast 1134MB
[task 2019-03-15T12:47:08.887Z] 12:47:08 INFO - TEST-OK | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | took 90044ms
[task 2019-03-15T12:47:08.888Z] 12:47:08 INFO - Not taking screenshot here: see the one that was previously logged
[task 2019-03-15T12:47:08.889Z] 12:47:08 INFO - TEST-UNEXPECTED-FAIL | browser/components/contextualidentity/test/browser/browser_forgetAPI_EME_forgetThisSite.js | Found a tab after previous test timed out: about:blank -
[task 2019-03-15T12:47:08.890Z] 12:47:08 INFO - checking window state

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 5 years ago4 years ago
Resolution: --- → INCOMPLETE

The current test crashes are a different bug than comment 0.

Tracking for Fission Nightly (M6)

DocShell has a null BrowsingContext because it has been unlinked? Document has a weak ref to the DocShell.

https://searchfox.org/mozilla-central/rev/5a10be606f2d76ef22f1f44565749490de991d35/netwerk/base/LoadInfo.cpp#297

needinfo kmag

Fission Milestone: --- → M6
Flags: needinfo?(kmaglione+bmo)
Assignee: nobody → kmaglione+bmo
Flags: needinfo?(kmaglione+bmo)

This covers most cycle collected objects which support weak references, but
not the ones which inherit from a cycle collected class and don't do any cycle
collection on their own.

Pushed by maglione.k@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/275198c0a966
Part 1 - Add macros to clear weak references on unlink. r=mccr8
https://hg.mozilla.org/integration/autoland/rev/1c7a70ea55e8
Part 2 - Clear weak references for most cycle collected objects on unlink. r=mccr8
Status: REOPENED → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Regressions: 1618717
Regressions: 1618037
Duplicate of this bug: 936728
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: