Bug 1535617: Part 1 - Add macros to clear weak references on unlink. r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D63961